config for create movie but not done

--- a/Movie.csproj
+++ b/Movie.csproj
@@ -22,6 +22,7 @@
     <Folder Include="Data\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\movies\" />
+    <Folder Include="wwwroot\images\cast\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
     <Folder Include="wwwroot\lib\bootstrap\dist\js\" />
