--- a/Movie.csproj
+++ b/Movie.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Views\Movie\3iqi0op0.gtl~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
@@ -23,6 +27,7 @@
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\movies\" />
     <Folder Include="wwwroot\images\cast\" />
+    <Folder Include="wwwroot\images\posts\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
     <Folder Include="wwwroot\lib\bootstrap\dist\js\" />
